--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Memems</string>
+
+    <string name="login">Логин</string>
+    <string name="password">Пароль</string>
+    <string name="password_field_helper">Пароль должен содержать 6 символов</string>
+    <string name="login_button">Войти</string>
+    <string name="error_field_empty">Поле не может быть пустым</string>
+    <string name="login_error">Вы ввели не верные данные. Попробуйте еще раз</string>
 </resources>
